--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,9 @@ body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  font-weight: normal;
+  color: black;
+  font-size: 18px;
 }
 
 h1,
@@ -26,9 +29,17 @@ blockquote {
 }
 
 a {
-  color: inherit;
+  color: black;
 }
 
 img {
   width: 100%;
+}
+
+.address {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.35;
+  letter-spacing: 0.01em;
+  color: #000;
 }
