--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,348 @@
-/* место для вашего кода */
+/*================ HEADER ================*/
+
+.header {
+  height: 105px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+  margin: 92px 0 96px;
+  padding: 0 50px 0;
+}
+
+.header-menu {
+  display: flex;
+  align-items: center;
+}
+
+.header__links-list {
+  list-style: circle;
+  display: flex;
+}
+
+.header__links-list-item {
+  margin-left: 32px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+  margin: 0;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  justify-self: center;
+  display: block;
+  height: 105px;
+}
+
+.logo-black {
+  height: 100%;
+}
+
+.header__address {
+  width: 240px;
+  justify-self: end;
+  align-self: end;
+}
+
+address {
+  font-style: normal;
+}
+
+/*================ COVER ================*/
+
+.cover {
+  height: 757px;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  background-position: center center;
+}
+
+.cover::after {
+  content: "";
+  background-color: rgb(0, 0, 0, 0.6);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+}
+
+.cover__title {
+  color: white;
+  position: relative;
+  z-index: 2;
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 1.225;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  color: #fff;
+  padding-top: 165px;
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.aligned-text {
+  display: block;
+}
+.aligned-text_center {
+  text-align: center;
+  padding-right: 30px;
+}
+.aligned-text_right {
+  text-align: end;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  position: relative;
+  z-index: 2;
+  text-transform: uppercase;
+  color: white;
+  display: flex;
+  width: 1000px;
+  margin: 0 auto;
+  justify-content: space-between;
+  margin-top: 125px;
+  align-items: center;
+}
+
+.cover__description-text {
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 1.27273;
+  text-transform: uppercase;
+  color: #fff;
+  word-spacing: 19px;
+  padding-left: 28px;
+}
+
+.bet-button {
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 22px;
+  text-align: center;
+  color: #fff;
+  padding: 12px 32px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.bet-button:hover {
+  background-color: white;
+  color: black;
+}
+
+/*================ LOTS ================*/
+
+.lots {
+  margin-top: 180px;
+}
+
+.lots__heading {
+  font-weight: bold;
+  font-size: 40px;
+  text-transform: uppercase;
+  color: #000;
+  padding-left: 64px;
+  margin-bottom: 27px;
+}
+
+.lots__card-list {
+  padding: 0 24px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style-type: none;
+  gap: 24px;
+  max-width: 100%;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 563px;
+  flex: 1 1 334px;
+}
+
+.card-link {
+  text-decoration: none;
+  height: 100%;
+  display: block;
+}
+
+.card {
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 50px 40px 48px;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.card::before {
+  content: "";
+  background-color: rgb(0, 0, 0, 0.6);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #fff;
+  position: relative;
+  z-index: 2;
+}
+
+.card__text {
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #fff;
+  position: relative;
+  z-index: 2;
+}
+
+.lots__look-more-link {
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 20px;
+  color: #000;
+  display: inline-block;
+  margin-left: 64px;
+  margin-top: 30px;
+  border-bottom: 1px solid #000;
+  padding-bottom: 2px;
+}
+
+/*================ ABOUT ================*/
+
+.about {
+  display: flex;
+  margin-top: 180px;
+  padding: 0 24px;
+}
+
+.about__column-logo {
+  height: 563px;
+  width: 334px;
+}
+
+.about__logo {
+  height: 240px;
+  width: 240px;
+  background-color: #000;
+  border-radius: 100%;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.about__logo-image {
+  width: 146px;
+}
+
+.about__column-text {
+  flex-grow: 1;
+  padding-left: 25px;
+}
+
+.about__title {
+  font-weight: bold;
+  font-size: 40px;
+  text-transform: uppercase;
+  color: #000;
+  margin: 100px 0;
+}
+
+.about__text {
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.01em;
+  color: #000;
+  width: 693px;
+}
+
+.about__text-margin {
+  margin-bottom: 24px;
+}
+
+/*================ FOOTER ================*/
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: start;
+  padding: 0 50px 88px;
+  margin-top: 180px;
+}
+
+.footer__links-list {
+  list-style: none;
+  text-align: center;
+}
+
+.footer__link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  display: flex;
+  list-style: none;
+  justify-content: flex-end;
+}
+
+.footer__social-list-item {
+  margin-left: 48px;
+}
+
+.no-margin {
+  margin: 0;
+}
+
+.footer__social-link {
+  width: 48px;
+  display: block;
+}
