--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 /*================ HEADER ================*/
 
 .header {
-  height: 105px;
   width: 100%;
   display: grid;
   grid-template-columns: 2fr 1fr 2fr;
@@ -17,6 +16,7 @@
 .header__links-list {
   list-style: circle;
   display: flex;
+  text-underline-offset: 4px;
 }
 
 .header__links-list-item {
@@ -48,14 +48,20 @@
   align-self: end;
 }
 
-address {
+.address {
   font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.35;
+  letter-spacing: 0.01em;
+  color: #000;
+  text-underline-offset: 4px;
 }
 
 /*================ COVER ================*/
 
 .cover {
-  height: 757px;
+  min-height: 757px;
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -70,8 +76,7 @@ address {
   width: 100%;
   position: absolute;
   z-index: 1;
-  top: 0;
-  left: 0;
+  inset: 0;
 }
 
 .cover__title {
@@ -301,10 +306,7 @@ address {
   letter-spacing: 0.01em;
   color: #000;
   width: 693px;
-}
-
-.about__text-margin {
-  margin-bottom: 24px;
+  padding-bottom: 24px;
 }
 
 /*================ FOOTER ================*/
@@ -320,6 +322,7 @@ address {
 .footer__links-list {
   list-style: none;
   text-align: center;
+  text-underline-offset: 4px;
 }
 
 .footer__link_active {
